# loan-default-fairness

./: .gitignore  LICENSE  README.md  executive_summary.md  main.py  pyproject.toml
notebooks/: 01_initial_exploration.ipynb  02_leakage_audit.ipynb  03_eda.ipynb  04_baselines.ipynb  05_logreg.ipynb  06_random_forest.ipynb  07_lightgbm.ipynb  08_calibration_thresholds.ipynb  09_shap_explainability.ipynb  10_counterfactuals.ipynb  11_fairness_audit.ipynb  12_fairness_mitigation.ipynb  13_test_set_evaluation.ipynb
reports/: counterfactual_analysis.md  eda_findings.md  fairness_analysis.md  leakage_audit.md  model_card.md  model_evaluation.md  results.json  shap_analysis.md  test_set_2017_results.json  test_set_evaluation.md
