[project]
name = "loan-default-fairness"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "fairlearn>=0.14.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
    "numba>=0.60",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
]
